--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: 'Ubuntu', sans-serif;
+}
 .header{
     position: absolute;
     z-index: 10;
