--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ p{
 }
 .container
 {
-    max-width: 1200px;
+    max-width: 1240px;
     margin: auto;
     padding-left: 10px;
     padding-right: 10px;
@@ -55,6 +55,7 @@ p{
 .col-2 img{
     max-width: 100%;
     padding: 50px 0;
+    /* margin: 30px 240px; */
     
     
 }
@@ -69,6 +70,10 @@ p{
     padding: 8px 30px;
     margin: 30px 0;
     border-radius: 30px;
+    transition: background 0.5s;
+}
+.btn:hover{
+    background: #563434;
 }
 .fas{
     color: black;
