--- a/style.css
+++ b/style.css
@@ -138,3 +138,9 @@ h4{
 .col-4:hover{
     transform: translateY(-7px);
 }
+.offer
+{
+    background: radial-gradient(#fff,#ffd6d6); 
+    margin-top: 80px;
+    padding: 30px 0;  
+}
