--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ body{
     font-family: 'Ubuntu', sans-serif;
 }
 .header{
-    position: absolute;
+    /* position: absolute;
     z-index: 10;
-    width: 100%;
+    width: 100%; */
     background: radial-gradient(#fff,#ffd6d6);
 }
 .navbar{
@@ -143,4 +143,7 @@ h4{
     background: radial-gradient(#fff,#ffd6d6); 
     margin-top: 80px;
     padding: 30px 0;  
+}
+small{
+    color: #555;
 }
