--- a/style.css
+++ b/style.css
@@ -157,8 +157,8 @@ small{
 .col-5 img{
     width: 100%;
     cursor: pointer;
-    filter:grayscale(100%)
+    /* filter:grayscale(100%) */
 }
-.col-5 img:hover{
+/* .col-5 img:hover{
     filter:grayscale(0)
-}
+} */
