--- a/style.css
+++ b/style.css
@@ -197,11 +197,11 @@ small{
 ul{
     list-style-type: none;
 }
-.app-logo
+/* .app-logo
 {
     margin-top: 20px;
 
 }
 .app-logo img{
     width: 140px;
-}
+} */
