--- a/style.css
+++ b/style.css
@@ -213,3 +213,11 @@ ul{
     width: 140px;
     margin-left: 40px;
 }
+@media only screen and (max-width: 600px){
+    .row{
+        text-align: center;
+    }
+    .col-2,.col-3,.col-4{
+        flex-basis: 100%;
+    }
+}
